--- a/Presentation/PresentationWebApp/Properties/launchSettings.json
+++ b/Presentation/PresentationWebApp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56294",
+      "applicationUrl": "https://localhost:44388/",
       "sslPort": 44388
     }
   },
@@ -23,6 +23,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "DeploymentProfile": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
     }
   }
 }
