--- a/Presentation/PresentationWebApp/appsettings.Production.json
+++ b/Presentation/PresentationWebApp/appsettings.Production.json
@@ -1,7 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //"dbPassword123!"
+    "DefaultConnection": "Server=sql5069.site4now.net;Database=DB_A6E425_enthome;User Id=DB_A6E425_enthome_admin;Password=dbPassword123!;MultipleActiveResultSets=true"
+    //Password: "dbPassword123!"
+    //Login Id: DB_A6E425_enthome_admin
+    //Database Name: DB_A6E425_enthome
+    //Server name: sql5069.site4now.net
   },
   "Logging": {
     "LogLevel": {
